# agentspec

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agentspec/: __init__.py  assertions.py  budget.py  ci.py  harness.py  loop_detector.py  mcp.py  mock.py  plugin.py  recorder.py  trace.py  visualize.py
agentspec/adapters/: __init__.py  base.py
agentspec/integrations/: __init__.py  agent_runner.py  openai_patch.py
agentspec/templates/: github_actions.yml
examples/: test_deepseek_live.py  test_harness_demo.py  test_mcp_server.py  test_weather_agent.py
tests/: test_assertions.py  test_ci.py  test_harness.py  test_loop_detector.py  test_mcp.py  test_mock.py  test_recorder.py  test_trace.py  test_visualize.py
