[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentspec"
version = "0.1.0"
description = "Testing framework for AI agent workflows. pytest for agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Miasyster" }]
keywords = ["ai", "agent", "testing", "mcp", "llm", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.entry-points.pytest11]
agentspec = "agentspec.plugin"

[project.urls]
Homepage = "https://github.com/Miasyster/agentspec"
Repository = "https://github.com/Miasyster/agentspec"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
